k8s/whispr/preprod/scheduling-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scheduling-service
  namespace: whispr-preprod
  labels:
    app: scheduling-service
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scheduling-service
  template:
    metadata:
      labels:
        app: scheduling-service
    spec:
      containers:
        - name: scheduling-service
          image: ghcr.io/whispr-messenger/scheduling-service/scheduling-service:sha-add06c5
          ports:
            - name: http
              containerPort: 3013
            - name: grpc
              containerPort: 50013
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 384Mi
              cpu: 500m
