k8s/whispr/preprod/scheduling-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scheduling-service
  namespace: whispr-preprod
spec:
  type: NodePort
  selector:
    app: scheduling-service
  ports:
    - name: http
      port: 3013
      targetPort: 3013
      nodePort: 30113
    - name: grpc
      port: 50013
      targetPort: 50013
